# real-time-market-anomaly-detection

./: .gitignore  Makefile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  sample.env
db/: schema.sql
src/market_anomaly/: config.py  main.py
src/market_anomaly/kafka/: init_topics.py
src/market_anomaly/kafka/processor/: main.py
src/market_anomaly/kafka/producer/: main.py
src/real_time_market_anomaly_detection/: __init__.py
