[project]
name = "real-time-market-anomaly-detection"
version = "0.1.0"
description = "Real-Time Market Anomaly Detection"
readme = "README.md"
authors = [{ name = "adiacov", email = "diacovmd@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
market-anomaly = "market_anomaly:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
