[project]
name = "market-anomaly"
version = "0.1.0"
description = "Real-Time Market Anomaly Detection"
readme = "README.md"
authors = [{ name = "adiacov", email = "diacovmd@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.3.1",
    "pydantic-settings[yaml]>=2.14.0",
    "requests>=2.33.1",
]

[project.scripts]
create-topics="market_anomaly.kafka.init_topics:create_topics"
produce = "market_anomaly.kafka.producer.main:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
